<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_nav_header_height"
    android:background="@drawable/ic_launcher_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dimen_activity_vertical_margin"
    android:paddingLeft="@dimen/dimen_activity_horizontal_margin"
    android:paddingRight="@dimen/dimen_activity_horizontal_margin"
    android:paddingTop="@dimen/dimen_activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="105dp"
        android:layout_height="94dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/dimen_nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvNombreApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
